correct border size and alignment

--- a/css/global.css
+++ b/css/global.css
@@ -53,22 +53,26 @@ header, main, footer {
 }
 
 main {
-  border-top: 1em solid #fff8f0;
-  border-left: 1em solid #fff8f0;
-  border-right: 1em solid #fff8f0;
+  border-top: .5em solid #fff8f0;
+  border-left: .5em solid #fff8f0;
+  border-right: .5em solid #fff8f0;
   border-bottom: 0;}
+  main ul {
+    max-width: 500px;}
+
+  main ul li {
+    text-align: center;} 
 
   main ul li a{
-    text-align: center;
     text-transform: uppercase;
     font-size:1.4em;
     color: #ac601b;}
 
 footer {
   border-top: 0;
-  border-left: 1em solid #fff8f0;
-  border-right: 1em solid #fff8f0;
-  border-bottom: 1em solid #fff8f0;}
+  border-left: .5em solid #fff8f0;
+  border-right: .5em solid #fff8f0;
+  border-bottom: .5em solid #fff8f0;}
 
   footer address {
     color: #fff7c7;
